# display

./: CMakeLists.txt  README.md
android/: AndroidManifest.xml
docs/: Android.md  Style.md  Translations.md
qml/: Main.qml  tools.js
qml/blocks/: B3DView.qml  BComponents.qml  BSettings.qml
qml/common/: CBlock.qml  CColorBox.qml  CComboBox.qml  CRadioButton.qml  CSlider.qml  CText.qml  CTextComboBox.qml  CTextSlider.qml
resources/: resources.qrc
src/: StylesManager.cpp  StylesManager.hpp  TranslationsManager.cpp  TranslationsManager.hpp  main.cpp
translations/: app_en.ts  app_fr.ts
